--- a/index.htm
+++ b/index.htm
@@ -431,9 +431,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="more_plus more_plus-ab">
+<!-- 					<div class="more_plus more_plus-ab">
 						<a href=""> <i class="far fa-arrow-alt-circle-right"></i></a>
-					</div>
+					</div> -->
      
  				</div>
 			</div>
