--- a/index.htm
+++ b/index.htm
@@ -448,7 +448,7 @@
 					<div class="contact_email">
 						<div class="clearfix">
 							<div class="contact_lg">
-								<div class="media-container">
+								<div class="media-containers">
 								    <div class="soco">
 								      <h1>Titlte..</h1>
 								    </div> 
